--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <td> <img src="images/family.jpg" alt="my family photo"></td>
       <td>
         <h1>Boge Ramanjaneyulu</h1>
-        <em>I am a software Developer by profession! and <a href="https://www.kite.zerodha.com">trader</a> by passion</em>
-        <p>I am a software developer working at hewlett packard and my passion is to be full time trader</p>
+        <em>I am a software Developer by profession! and <a href="https://kite.zerodha.com">trader</a> by passion.</em>
+        <p>I am a software developer working at hewlett packard.</p>
       </td>
     </tr>
   </table>
@@ -65,7 +65,7 @@
             <td>.NET</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr <tr>
-          <td>Nodejs</td>
+          <td>Salesforce</td>
           <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
