--- a/contactus.html
+++ b/contactus.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me!</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h2><u> My Contact Details</u></h2>    
+
+    <h3><u> My Contact Details</u></h3>
     <p>rahamath nagar,</p>
     <p>anantapur - 515001.</p>
     <p>andhra pradesh</p>
