--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>Ramanjaneyulu Boge's personal site</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+  <body>
   <table cellspacing="20">
     <tr>
       <td> <img src="images/family.jpg" alt="my family photo"></td>
       <td>
         <h1>Boge Ramanjaneyulu</h1>
-        <em>I am a software Developer by profession! and <a href="https://kite.zerodha.com">trader</a> by passion.</em>
-        <p>I am a software developer working at hewlett packard.</p>
+        <em>I am a software Developer by profession! and <a href="https://www.kite.zerodha.com">trader</a> by passion</em>
+        <p>I am a software developer working at hewlett packard and my passion is to be full time trader</p>
       </td>
     </tr>
   </table>
 
 
-  <hr size="2">
+  <hr>
   <h3>My Education details</h3>
   <ul>
     <li>B.Tech from Sree Vidyanikethan Engineering College with 62.3%</li>
@@ -65,7 +66,7 @@
             <td>.NET</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr <tr>
-          <td>Salesforce</td>
+          <td>Nodejs</td>
           <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
@@ -74,7 +75,7 @@
     </tr>
 
     <tr>
-      <td>MongoDB</td>
+      <td>SQL Server</td>
       <td>⭐</td>
     </tr>
 
